fix: weird spacing of body

--- a/src/styles/custom.scss
+++ b/src/styles/custom.scss
@@ -11,7 +11,7 @@
 
 @media all and ($mobile) {
   #yuma-body {
-    padding: 2rem 4rem !important;
+    padding: 2rem !important;
   }
 }
 
@@ -23,7 +23,7 @@
   .explorer-ul {
     font-size: large !important;
     padding-top: 1rem !important;
-    padding-left: 1.9rem !important;
+    padding-left: 1.2rem !important;
   }
 }
 
